--- a/scripts/search/search.html
+++ b/scripts/search/search.html
@@ -20,6 +20,6 @@
       <div class="body" data-body></div>
     </div>
   </template>
-  <script src="search.js"></script>
+  <script type="module" src="search.js"></script>
 </body>
 </html>
