--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  
+  <div class="wrapper">
   <div id="container"></div>
+  </div>
 
   <script type="module" src="./scripts/main.js"></script>
   
